# xii-secom-minicurso-fp-haskell

./: CHANGELOG.md  README.md  xii-secom-minicurso-fp-haskell.cabal
app/: Base.hs  GameOfLife.hs  Intro.hs  Main.hs  TicTacToe.hs
data/: life.txt
